--- a/scss/helpers/classes/_positioning.scss
+++ b/scss/helpers/classes/_positioning.scss
@@ -1,4 +1,4 @@
-$positions: (static, relative, absolute, fixed)
+$positions: (static, relative, absolute, fixed);
 
 @each $position in $positions {
 	.pos-#{$position} {
