--- a/scss/helpers/variables/colors/_colors.scss
+++ b/scss/helpers/variables/colors/_colors.scss
@@ -1,11 +1,11 @@
+$colors: () !default;
+
 @import 'material-colors';
 @import 'flat-colors';
 @import 'brand-colors';
 
-$color-map: () !default;
-
 @function color($family, $color, $shade: 500) {
-	$map:    map-get($color-map, $family);
+	$map:    map-get($colors, $family);
 	$group:  map-get($map, $color);
 	$result: map-get($group, $shade);
 	@return $result;
