--- a/scss/helpers/classes/_classes.scss
+++ b/scss/helpers/classes/_classes.scss
@@ -1,6 +1,7 @@
 @import 'utility';
 @import 'spacing';
 @import 'positioning';
+@import 'sizing';
 @import 'colors';
 @import 'radius';
 @import 'shadows';
