--- a/scss/helpers/classes/_spacing.scss
+++ b/scss/helpers/classes/_spacing.scss
@@ -30,6 +30,17 @@ $space: () !default;
 	}
 }
 
+@each $name, $size in $space {
+	.spaced-#{$name} {
+		&:not(:first-of-type) {
+			margin-left: #{$size / 2};
+		}
+		&:not(:last-of-type) {
+			margin-right: #{$size / 2};
+		}
+	}
+}
+
 // No padding or margin.
 @each $side in $sides {
 	.no-padding-#{$side} {
